crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_backtick_identifiers.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
`class` `two words` `operator+`

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportDirectiveList
  KotlinFileItemList
    Statement
      ExpressionStatement
        BinaryExpression
          NameExpression
            Identifier "`class`" @ 0..7 trailing=[Whitespace " "]
          Identifier "`two words`" @ 8..19 trailing=[Whitespace " "]
          NameExpression
            Identifier "`operator+`" @ 20..31
      TerminatorList
  Eof "" @ 32..32 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
