crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_character_literals.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
'a' '\n' '\'' '\\' '\u0041'

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    Statement
      ExpressionStatement
        BinaryExpression
          BinaryExpression
            BinaryExpression
              BinaryExpression
                LiteralExpression
                  CharacterLiteral "'a'" @ 0..3 trailing=[Whitespace " "]
                LiteralExpression
                  CharacterLiteral "'\\n'" @ 4..8 trailing=[Whitespace " "]
              LiteralExpression
                CharacterLiteral "'\\''" @ 9..13 trailing=[Whitespace " "]
            LiteralExpression
              CharacterLiteral "'\\\\'" @ 14..18 trailing=[Whitespace " "]
          LiteralExpression
            CharacterLiteral "'\\u0041'" @ 19..27
      TerminatorList
  Eof "" @ 28..28 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=4..8 message="unexpected token in expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=9..13 message="unexpected token in expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=14..18 message="unexpected token in expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=19..27 message="unexpected token in expression"

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(4), end: TextSize(8) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(9), end: TextSize(13) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(14), end: TextSize(18) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(19), end: TextSize(27) }) message=unexpected token in expression
