crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_collection_literal_punctuation.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
[1, 2, 3]

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    Statement
      ExpressionStatement
        CollectionLiteralExpression
          LBracket "[" @ 0..1
          ValueArgumentEntryList
            ValueArgument
              ValueArgumentPrefixList
              LiteralExpression
                IntegerLiteral "1" @ 1..2
            Comma "," @ 2..3 trailing=[Whitespace " "]
            ValueArgument
              ValueArgumentPrefixList
              LiteralExpression
                IntegerLiteral "2" @ 4..5
            Comma "," @ 5..6 trailing=[Whitespace " "]
            ValueArgument
              ValueArgumentPrefixList
              LiteralExpression
                IntegerLiteral "3" @ 7..8
          RBracket "]" @ 8..9
      TerminatorList
  Eof "" @ 10..10 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
