crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_empty_line_string.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
""

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportDirectiveList
  KotlinFileItemList
    Statement
      ExpressionStatement
        StringTemplateExpression
          StringTemplateEntryList
            StringTemplateEntry
              OpenQuote "\"" @ 0..1
          ClosingQuote "\"" @ 1..2
      TerminatorList
  Eof "" @ 3..3 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
