crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_empty_raw_string.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
""""""

syntax:
syntax:
KotlinFile
  ImportList
  Statement
    ExpressionStatement
      StringTemplateExpression
        StringTemplateEntry
          OpenQuote "\"\"\"" @ 0..3
        ClosingQuote "\"\"\"" @ 3..6
  Eof "" @ 7..7 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
